[gd_scene load_steps=16 format=4 uid="uid://lojptpwvgouj"]

[ext_resource type="PackedScene" uid="uid://by252r1um8onb" path="res://Levels/microgame.tscn" id="1_eqyph"]
[ext_resource type="Texture2D" uid="uid://tiy32gry558h" path="res://Levels/Jtad/Microgames/Cherrypicking/weed.png" id="2_1f0f1"]
[ext_resource type="Script" uid="uid://cnquc5id8yuq6" path="res://Levels/Jtad/Microgames/Cherrypicking/microgame.gd" id="2_2bm8x"]
[ext_resource type="Shader" uid="uid://byh30q7ehqe2k" path="res://Levels/Jtad/Microgames/Cherrypicking/weedwave.gdshader" id="2_b25di"]
[ext_resource type="Script" uid="uid://diy8nx3ud76c5" path="res://Levels/Jtad/Microgames/Cherrypicking/weeds.gd" id="3_1f0f1"]
[ext_resource type="Texture2D" uid="uid://dwkquxmvui6bi" path="res://Levels/Jtad/Microgames/Cherrypicking/fish.png" id="5_herq0"]
[ext_resource type="Script" uid="uid://cixnyrymo1h4q" path="res://Levels/Jtad/Microgames/Cherrypicking/dodgy.gd" id="7_kfqt6"]
[ext_resource type="Texture2D" uid="uid://230mlf8lrqpb" path="res://Levels/Jtad/Microgames/Mandatory Dressup Game/star.png" id="8_angcf"]
[ext_resource type="AudioStream" uid="uid://c733tjxi1l3mn" path="res://Levels/Jtad/Microgames/Cherrypicking/CORRECT.wav" id="9_yi4p0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b25di"]
shader = ExtResource("2_b25di")
shader_parameter/offset = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b25di"]
resource_name = "Weed"
texture = ExtResource("2_1f0f1")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_herq0"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_b25di")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_herq0"]
shader = ExtResource("2_b25di")
shader_parameter/offset = 2.78

[sub_resource type="AtlasTexture" id="AtlasTexture_2bm8x"]
atlas = ExtResource("5_herq0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfqt6"]
atlas = ExtResource("5_herq0")
region = Rect2(0, 32, 32, 32)

[node name="Microgame" instance=ExtResource("1_eqyph")]
script = ExtResource("2_2bm8x")
preparation_text = "Identify!"
beats = 12

[node name="Weeds" type="TileMapLayer" parent="." index="1"]
material = SubResource("ShaderMaterial_b25di")
tile_map_data = PackedByteArray("AAAAAAEAAAAAAAAAAAABAAIAAAAAAAEAAAACAAMAAAAAAAEAAAAEAAMAAAAAAAEAAAAFAAIAAAAAAAEAAAAGAAIAAAAAAAAAAAAHAAEAAAAAAAAAAAABAAAAAAAAAAAAAAACAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAABAAEAAAAAAAEAAAAAAAIAAAAAAAEAAAACAAIAAAAAAAEAAAAEAAIAAAAAAAEAAAAFAAMAAAAAAAEAAAAGAAMAAAAAAAEAAAAHAAIAAAAAAAEAAAAHAAMAAAAAAAEAAAAHAAQAAAAAAAEAAAAHAAUAAAAAAAEAAAABAAMAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAQAAAAAAAEAAAABAAQAAAAAAAEAAAACAAQAAAAAAAEAAAADAAQAAAAAAAEAAAAEAAQAAAAAAAEAAAAFAAQAAAAAAAEAAAAGAAQAAAAAAAEAAAAGAAUAAAAAAAEAAAAFAAUAAAAAAAEAAAAEAAUAAAAAAAEAAAADAAUAAAAAAAEAAAACAAUAAAAAAAEAAAABAAUAAAAAAAEAAAAAAAUAAAAAAAEAAAADAAMAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_herq0")
script = ExtResource("3_1f0f1")

[node name="Weeds2" type="TileMapLayer" parent="." index="2"]
z_index = -8
material = SubResource("ShaderMaterial_herq0")
position = Vector2(-19, 13)
tile_map_data = PackedByteArray("AAAAAAEAAAAAAAAAAAAAAAIAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAQAAAAAAAEAAAABAAQAAAAAAAEAAAABAAMAAAAAAAEAAAABAAIAAAAAAAEAAAABAAEAAAAAAAEAAAABAAAAAAAAAAEAAAABAP//AAAAAAEAAAACAAMAAAAAAAEAAAACAAQAAAAAAAEAAAADAAQAAAAAAAEAAAADAAMAAAAAAAEAAAADAAIAAAAAAAEAAAADAAEAAAAAAAEAAAAEAAQAAAAAAAEAAAAEAAMAAAAAAAEAAAAGAAQAAAAAAAEAAAAGAAMAAAAAAAEAAAAGAAIAAAAAAAEAAAAFAAQAAAAAAAEAAAAFAAMAAAAAAAEAAAAFAAIAAAAAAAEAAAADAAAAAAAAAAAAAAABAP7/AAAAAAAAAAACAAIAAAAAAAAAAAAEAAIAAAAAAAEAAAAFAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAP//AAAAAAAAAAAHAAEAAAAAAAEAAAAHAAIAAAAAAAEAAAAIAAMAAAAAAAEAAAAIAAQAAAAAAAEAAAAIAAAAAAAAAAEAAAAIAAEAAAAAAAEAAAAIAAIAAAAAAAEAAAAHAAMAAAAAAAEAAAAHAAQAAAAAAAEAAAAEAAAAAAAAAAEAAAAEAAEAAAAAAAEAAAAEAP//AAAAAAAAAAA=")
tile_set = SubResource("TileSet_herq0")
script = ExtResource("3_1f0f1")

[node name="ColorRect" type="ColorRect" parent="." index="3"]
z_index = -12
custom_minimum_size = Vector2(256, 192)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 256.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
color = Color(6.257e-07, 0.285524, 0.364543, 1)

[node name="Blackout" type="ColorRect" parent="." index="4"]
visible = false
z_index = 1
custom_minimum_size = Vector2(256, 192)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 256.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223888, 2.4667e-05, 0.213421, 0.631373)

[node name="Fakefish" type="Sprite2D" parent="." index="5"]
z_index = -1
position = Vector2(136, 123)
texture = SubResource("AtlasTexture_2bm8x")
script = ExtResource("7_kfqt6")

[node name="Fakefish2" type="Sprite2D" parent="." index="6"]
z_index = -1
position = Vector2(74, 97)
texture = SubResource("AtlasTexture_2bm8x")
script = ExtResource("7_kfqt6")

[node name="Fakefish3" type="Sprite2D" parent="." index="7"]
z_index = -1
position = Vector2(200, 160)
texture = SubResource("AtlasTexture_2bm8x")
script = ExtResource("7_kfqt6")

[node name="Fakefish4" type="Sprite2D" parent="." index="8"]
z_index = -1
position = Vector2(234, 90)
texture = SubResource("AtlasTexture_2bm8x")
script = ExtResource("7_kfqt6")

[node name="RealFish" type="Sprite2D" parent="." index="9"]
z_index = -1
position = Vector2(43, 147)
texture = SubResource("AtlasTexture_kfqt6")
script = ExtResource("7_kfqt6")
real = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="RealFish" index="0"]
emitting = false
texture = ExtResource("8_angcf")
one_shot = true
explosiveness = 1.0
use_fixed_seed = true
seed = 3794713503
spread = 180.0
gravity = Vector2(0, 9)
initial_velocity_min = 263.96
initial_velocity_max = 263.96
scale_amount_min = 0.4
scale_amount_max = 0.4

[node name="Correct" type="AudioStreamPlayer" parent="." index="10"]
stream = ExtResource("9_yi4p0")
volume_db = -3.483
pitch_scale = 0.85
bus = &"Effects"

[node name="ColorRect2" type="ColorRect" parent="." index="11"]
offset_left = 3.0
offset_top = 3.0
offset_right = 19.0
offset_bottom = 19.0
scale = Vector2(2, 2)
color = Color(0, 0.790473, 0.956402, 0.454902)

[node name="Sprite2D" type="Sprite2D" parent="ColorRect2" index="0"]
position = Vector2(8, 8)
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_kfqt6")
